--- a/style.css
+++ b/style.css
@@ -1,14 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 *{padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-}
-h1, p{
-	font-family: 'Cabin Sketch', cursive;
-}
-p{	font-size: 1.5rem;
-	padding: 4rem;
-	text-align: left;
 }
 body{
 	width: 100%;
@@ -16,9 +10,18 @@ body{
 	background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRP-yAJO7qgb4D78E1XXsrNNOjXP7YVue5VVFMuJrsE-x8n_JD4&usqp=CAU");
 	background-size: 100%;
 }
+h1{
+	font-family: 'Cabin Sketch', cursive;
+}
+p{	
+	font-family: 'Indie Flower', cursive;
+	font-size: 48px;
+	padding: 4rem;
+	text-align: left;
+}
 
 h1{
-	font-size: 7rem;
+	font-size: 86px;
 	padding-bottom: 2rem;
 	padding-top: 4rem;
 	text-align: center;
